fixed right gap!

--- a/css/stylehome.css
+++ b/css/stylehome.css
@@ -187,6 +187,10 @@ header {
 
 
 /* How It Works Styling */
+.row{
+    margin-left:15px;
+    margin-right:15px;
+}
 .how-it-works {
     background-color:#DFE3F1;
 }
@@ -228,7 +232,7 @@ blockquote {
 }
 
 .quote-txt {
-    width: 720px;
+    max-width: 720px;
     height: 128px;
     padding-left: 60px;
     padding-right: 60px;
